EDAN01/minizinc-1.6/tests/type-inst-checking/minizinc/bug208.exp
bug208.mzn:7:
  error: multiple assignments for global variable `a'. 
  The assignments occur at: 
     bug208.mzn:8 
     bug208.mzn:9
